--- a/translations/es/clarkwinkelmann-carving-contest.json
+++ b/translations/es/clarkwinkelmann-carving-contest.json
@@ -46,13 +46,11 @@
                 "view": "",
                 "like": "",
                 "participate": "",
-                "moderate": "",
-                "heading": ""
+                "moderate": ""
             },
             "settings": {
                 "maxEntriesPerUser": "",
-                "colorMode": "",
-                "title": ""
+                "colorMode": ""
             },
             "colors": {
                 "simple": "",
