--- a/translations/es/flarum-tags.json
+++ b/translations/es/flarum-tags.json
@@ -42,9 +42,7 @@
                 "create_secondary_tag_button": "Crear etiqueta secundaria",
                 "primary_heading": "Etiquetas principales",
                 "secondary_heading": "Etiquetas secundarias",
-                "settings_heading": "Ajustes",
-                "create_tag_button": "=> flarum-tags.ref.create_tag",
-                "settings_button": "Ajustes"
+                "settings_heading": "Ajustes"
             }
         },
         "forum": {
@@ -88,8 +86,7 @@
         },
         "ref": {
             "name": "Nombre",
-            "tags": "Etiquetas",
-            "create_tag": "Crear etiqueta"
+            "tags": "Etiquetas"
         }
     }
 }
