--- a/translations/es/fof-byobu.json
+++ b/translations/es/fof-byobu.json
@@ -54,8 +54,7 @@
             },
             "user": {
                 "settings": {
-                    "block_pd": "",
-                    "unified_index": ""
+                    "block_pd": ""
                 },
                 "byobu_link": "",
                 "dropdown_label": ""
@@ -69,9 +68,6 @@
                 "pd_user_left_text": "",
                 "pd_added_text": "",
                 "pd_added_label": ""
-            },
-            "confirm": {
-                "make_public": ""
             }
         },
         "admin": {
