--- a/translations/es/fof-forum-statistics-widget.json
+++ b/translations/es/fof-forum-statistics-widget.json
@@ -13,8 +13,7 @@
             "settings": {
                 "widget_ignore_private_discussions_label": "Ignorar discusiones privadas",
                 "widget_order_label": "Orden del Widget",
-                "widget_helper_text": "Edite esta configuración para ajustar la posición de este widget en la sección sidenav de su foro. Cuanto mayor sea el número, mayor será este widget en la lista de elementos secundarios (este valor puede ser positivo o negativo).",
-                "title": "Configuración del Widget"
+                "widget_helper_text": "Edite esta configuración para ajustar la posición de este widget en la sección sidenav de su foro. Cuanto mayor sea el número, mayor será este widget en la lista de elementos secundarios (este valor puede ser positivo o negativo)."
             },
             "permissions": {
                 "view_discussions_count_label": "",
