--- a/translations/es/fof-links.json
+++ b/translations/es/fof-links.json
@@ -21,12 +21,7 @@
             },
             "links": {
                 "create_button": "=> fof-links.ref.create_link",
-                "links": "=> fof-links.ref.links",
-                "about_text": "Administrar enlaces de menú principal."
-            },
-            "nav": {
-                "links_button": "=> fof-links.ref.links",
-                "links_text": "Administrar los elementos de la lista de navegación primaria."
+                "links": "=> fof-links.ref.links"
             }
         },
         "ref": {
