--- a/translations/es/fof-recaptcha.json
+++ b/translations/es/fof-recaptcha.json
@@ -5,8 +5,7 @@
                 "help_text": "",
                 "secret_key_label": "",
                 "site_key_label": "",
-                "type_label": "",
-                "title": ""
+                "type_label": ""
             },
             "permissions": {
                 "post_without_captcha": ""
