--- a/translations/es/fof-user-directory.json
+++ b/translations/es/fof-user-directory.json
@@ -39,9 +39,7 @@
                 "most_posts": "",
                 "least_posts": "",
                 "most_discussions": "",
-                "least_discussions": "",
-                "seen_recent": "",
-                "seen_oldest": ""
+                "least_discussions": ""
             }
         }
     }
