--- a/translations/es/fof-pages.json
+++ b/translations/es/fof-pages.json
@@ -20,8 +20,7 @@
                 "url_placeholder": "=> fof-pages.ref.url"
             },
             "pages": {
-                "create_button": "=> fof-pages.ref.create_page",
-                "about_text": "Crea y administra páginas estáticas."
+                "create_button": "=> fof-pages.ref.create_page"
             },
             "pages_list": {
                 "empty_text": "Parece que no hay páginas aquí.",
@@ -33,10 +32,6 @@
             "badges": {
                 "hidden": "",
                 "restricted": ""
-            },
-            "nav": {
-                "pages_button": "=> fof-pages.ref.pages",
-                "pages_text": "Crear páginas estaticas personalizadas."
             }
         },
         "ref": {
