--- a/translations/es/justoverclock-welcomebox.json
+++ b/translations/es/justoverclock-welcomebox.json
@@ -5,9 +5,7 @@
             "npost": "",
             "discussion": "",
             "welcomeguest": "",
-            "notregistered": "",
-            "logout": "",
-            "groupwb": ""
+            "notregistered": ""
         },
         "admin": {
             "enablepostbox": ""
