--- a/translations/fr/fof-byobu.json
+++ b/translations/fr/fof-byobu.json
@@ -54,8 +54,7 @@
             },
             "user": {
                 "settings": {
-                    "block_pd": "Bloquer les discussions privées",
-                    "unified_index": "Combinez des discussions privées dans un index unifié"
+                    "block_pd": "Bloquer les discussions privées"
                 },
                 "byobu_link": "Discussions privées",
                 "dropdown_label": "Discussions privées"
@@ -69,9 +68,6 @@
                 "pd_user_left_text": "{username} a quitté la discussion privée",
                 "pd_added_text": "{username} vous a ajouté à une discussion privée",
                 "pd_added_label": "Quelqu’un m’ajoute à une discussion privée existante"
-            },
-            "confirm": {
-                "make_public": "Cela rendra cette discussion privée visible pour tout le monde. Vérifiez s’il s’agit de la bonne action avant de continuer."
             }
         },
         "admin": {
