--- a/translations/fr/fof-linguist.json
+++ b/translations/fr/fof-linguist.json
@@ -47,8 +47,7 @@
                 "frontend": "",
                 "frontend-all-except-admin": "",
                 "mass-edit": "",
-                "results": "",
-                "for-extension-unavailable": ""
+                "results": ""
             },
             "clear-cache": {
                 "text": "",
