--- a/translations/fr/fof-masquerade.json
+++ b/translations/fr/fof-masquerade.json
@@ -51,9 +51,7 @@
                 "force-user-to-completion": "Forcer l’utilisateur à compléter son profil",
                 "options": "Options",
                 "option-new": "Nouvelle option",
-                "option-comma-warning": "L’étiquette d'une option ne peut contenir aucune virgule (\",\").",
-                "disable-user-bio": "Désactiver le champ biographie de l’utilisateur",
-                "option-coma-warning": "L’étiquette d’une option ne peut contenir aucune virgule (\",\")."
+                "option-comma-warning": "L’étiquette d'une option ne peut contenir aucune virgule (\",\")."
             },
             "types": {
                 "advanced": "Avancées",
@@ -61,11 +59,7 @@
                 "email": "E-mail",
                 "select": "Menu déroulant",
                 "url": "Lien"
-            },
-            "menu": {
-                "description": "Configurer les champs de profil utilisateur.\n"
-            },
-            "title": "Masquerade"
+            }
         }
     }
 }
