--- a/translations/fr/fof-recaptcha.json
+++ b/translations/fr/fof-recaptcha.json
@@ -5,8 +5,7 @@
                 "help_text": "Obtenez vos informations d’identification Google reCAPTCHA <a>ici</a>.",
                 "secret_key_label": "Clé secrète",
                 "site_key_label": "Clé du site",
-                "type_label": "type de reCAPTCHA",
-                "title": "FriendsOfFlarum reCAPTCHA"
+                "type_label": "type de reCAPTCHA"
             },
             "permissions": {
                 "post_without_captcha": "Créez des messages et des discussions sans captcha"
