--- a/translations/fr/fof-user-directory.json
+++ b/translations/fr/fof-user-directory.json
@@ -39,9 +39,7 @@
                 "most_posts": "Le plus de messages",
                 "least_posts": "Le moins de messages",
                 "most_discussions": "Le plus de discussions",
-                "least_discussions": "Le moins de discussions",
-                "seen_recent": "Récemment en ligne",
-                "seen_oldest": "Hors-ligne depuis longtemps"
+                "least_discussions": "Le moins de discussions"
             }
         }
     }
