--- a/translations/fr/michaelbelgium-profile-views.json
+++ b/translations/fr/michaelbelgium-profile-views.json
@@ -9,8 +9,7 @@
         "admin": {
             "settings": {
                 "track_guests_label": "Suivre les invités",
-                "max_viewcount_label": "Éléments maximum de la liste des visiteurs",
-                "title": "Paramètres Profileviews"
+                "max_viewcount_label": "Éléments maximum de la liste des visiteurs"
             }
         }
     }
