--- a/translations/fr/antoinefr-online.json
+++ b/translations/fr/antoinefr-online.json
@@ -8,8 +8,7 @@
         "admin": {
             "settings": {
                 "displaymax": "",
-                "titleoflist": "",
-                "title": ""
+                "titleoflist": ""
             }
         }
     }
