--- a/translations/fr/migratetoflarum-fake-data.json
+++ b/translations/fr/migratetoflarum-fake-data.json
@@ -13,8 +13,7 @@
                 "date": "",
                 "date-start-placeholder": "",
                 "date-interval-placeholder": "",
-                "send": "",
-                "title": ""
+                "send": ""
             }
         },
         "forum": {
@@ -45,8 +44,7 @@
             "date": "",
             "date-start-placeholder": "",
             "date-interval-placeholder": "",
-            "send": "",
-            "discussion-count": ""
+            "send": ""
         }
     }
 }
