--- a/translations/fr/nearata-signup-confirm-password.json
+++ b/translations/fr/nearata-signup-confirm-password.json
@@ -1,10 +1,7 @@
 {
     "nearata-signup-confirm-password": {
         "forum": {
-            "field_placeholder": "",
-            "field_required": "",
-            "password_min_length": "",
-            "password_must_match": ""
+            "field_placeholder": ""
         }
     }
 }
