--- a/translations/it/fof-byobu.json
+++ b/translations/it/fof-byobu.json
@@ -54,8 +54,7 @@
             },
             "user": {
                 "settings": {
-                    "block_pd": "Blocca discussioni private",
-                    "unified_index": "Combina discussioni private all'interno dell'indice unificato"
+                    "block_pd": "Blocca discussioni private"
                 },
                 "byobu_link": "Discussioni Private",
                 "dropdown_label": "Discussioni Private"
@@ -69,9 +68,6 @@
                 "pd_user_left_text": "{username} ha lasciato la discussione privata",
                 "pd_added_text": "{username} ti ha aggiunto ad una discussione privata",
                 "pd_added_label": "Qualcuno mi aggiunge a una discussione privata esistente"
-            },
-            "confirm": {
-                "make_public": "Ciò renderà questa discussione privata visibile a tutti. Considera se questa è l'azione corretta prima di procedere."
             }
         },
         "admin": {
