--- a/translations/it/fof-gamification.json
+++ b/translations/it/fof-gamification.json
@@ -28,8 +28,7 @@
             },
             "modal": {
                 "title": "Votanti",
-                "upvotes_label": "Voti positivi:",
-                "downvotes_label": "Voti negativi:"
+                "upvotes_label": "Voti positivi:"
             },
             "mod_item": "Mostra votanti"
         },
@@ -83,9 +82,6 @@
                         "name": "Nome"
                     }
                 }
-            },
-            "nav": {
-                "desc": "Gamification per la community del tuo forum"
             }
         }
     }
