--- a/translations/it/fof-recaptcha.json
+++ b/translations/it/fof-recaptcha.json
@@ -5,8 +5,7 @@
                 "help_text": "Ottieni credenziali Google reCAPTCHA  <a>qui</a>.",
                 "secret_key_label": "Chiave segreta",
                 "site_key_label": "Chiave sito",
-                "type_label": "Tipo reCAPTCHA",
-                "title": ""
+                "type_label": "Tipo reCAPTCHA"
             },
             "permissions": {
                 "post_without_captcha": "Crea post e discussioni senza captcha"
