--- a/translations/it/fof-user-directory.json
+++ b/translations/it/fof-user-directory.json
@@ -39,9 +39,7 @@
                 "most_posts": "Con più post",
                 "least_posts": "Con meno post",
                 "most_discussions": "Con più discussioni",
-                "least_discussions": "Con meno discussioni",
-                "seen_recent": "Più recenti online",
-                "seen_oldest": "Meno recenti online"
+                "least_discussions": "Con meno discussioni"
             }
         }
     }
