--- a/translations/it/jslirola-login2seeplus.json
+++ b/translations/it/jslirola-login2seeplus.json
@@ -13,13 +13,7 @@
             "image": "Immagini",
             "code": "Codice",
             "post": {
-                "title": "Nascondi i contenuti che superano questa lunghezza (<em> -1 </em> per mostrare tutto.)",
-                "help": ""
-            },
-            "php": {
-                "title": "",
-                "help": "",
-                "label": ""
+                "title": "Nascondi i contenuti che superano questa lunghezza (<em> -1 </em> per mostrare tutto.)"
             }
         }
     }
