--- a/translations/it/justoverclock-infocards.json
+++ b/translations/it/justoverclock-infocards.json
@@ -17,13 +17,7 @@
             "wednesday": "Mercoledì",
             "thursday": "Giovedì",
             "friday": "Venerdì",
-            "saturday": "Sabato",
-            "Tuesday": "",
-            "Wednesday": "",
-            "Thursday": "",
-            "Friday": "",
-            "Saturday": "",
-            "Monday": ""
+            "saturday": "Sabato"
         },
         "admin": {
             "createapikey": "Api Key",
