--- a/translations/it/justoverclock-welcomebox.json
+++ b/translations/it/justoverclock-welcomebox.json
@@ -5,9 +5,7 @@
             "npost": "=> core.forum.user.posts_link",
             "discussion": "=> core.forum.user.discussions_link",
             "welcomeguest": "Benvenuto Ospite",
-            "notregistered": "Attualmente non sei registrato al forum.",
-            "logout": "",
-            "groupwb": ""
+            "notregistered": "Attualmente non sei registrato al forum."
         },
         "admin": {
             "enablepostbox": "Abilita Welcome Box Ospiti"
