--- a/translations/it/askvortsov-pwa.json
+++ b/translations/it/askvortsov-pwa.json
@@ -10,8 +10,7 @@
                     "description_text": "",
                     "long_name_text": "",
                     "heading": "",
-                    "short_name_text": "",
-                    "name_text": ""
+                    "short_name_text": ""
                 },
                 "colors": {
                     "heading": "",
@@ -42,8 +41,7 @@
                 "no_name": "",
                 "key_gen_failed": "",
                 "suggest_gmp": "",
-                "success": "",
-                "push_needs_gmp_and_web_push": ""
+                "success": ""
             }
         },
         "forum": {
