--- a/translations/it/clarkwinkelmann-emojionearea.json
+++ b/translations/it/clarkwinkelmann-emojionearea.json
@@ -11,9 +11,7 @@
                 "enableTones": "Abilita toni della pelle",
                 "filtersPosition": "Sposta categorie in basso",
                 "searchPosition": "Sposta ricerca e toni in basso",
-                "hideFlarumButton": "Nascondi il tasto emoji predefinito di Flarum",
-                "title": "Impostazioni EmojioneArea",
-                "hideFlarumButtonHelp": "L'estensione del Selettore Emoji deve essere attivata dopo l'estensione Emoji principale per funzionare"
+                "hideFlarumButton": "Nascondi il tasto emoji predefinito di Flarum"
             }
         }
     }
